// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overflowClipMargin renders 0 1`] = `
Array [
  .c0 {
  overflow-clip-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClipMargin renders function 1`] = `
Array [
  .c0 {
  overflow-clip-margin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: has;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: has;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClipMargin renders invalid theme path 1`] = `
Array [
  .c0 {
  overflow-clip-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClipMargin renders negative number 1`] = `
Array [
  .c0 {
  overflow-clip-margin: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClipMargin renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-clip-margin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-clip-margin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-clip-margin: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip-margin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-clip-margin: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClipMargin renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    overflow-clip-margin: July;
  }
}

@media April {
  .c0 {
    overflow-clip-margin: August;
  }
}

@media January {
  .c0 {
    overflow-clip-margin: September;
  }
}

@media April {
  .c0 {
    overflow-clip-margin: November;
  }
}

@media June {
  .c0 {
    overflow-clip-margin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    overflow-clip-margin: July;
  }
}

@media April {
  .c0 {
    overflow-clip-margin: August;
  }
}

@media January {
  .c0 {
    overflow-clip-margin: September;
  }
}

@media April {
  .c0 {
    overflow-clip-margin: November;
  }
}

@media June {
  .c0 {
    overflow-clip-margin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-clip-margin: January;
  }
}

@media April {
  .c0 {
    overflow-clip-margin: December;
  }
}

@media January {
  .c0 {
    overflow-clip-margin: April;
  }
}

@media April {
  .c0 {
    overflow-clip-margin: May;
  }
}

@media June {
  .c0 {
    overflow-clip-margin: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-clip-margin: January;
  }
}

@media April {
  .c0 {
    overflow-clip-margin: December;
  }
}

@media January {
  .c0 {
    overflow-clip-margin: April;
  }
}

@media April {
  .c0 {
    overflow-clip-margin: May;
  }
}

@media June {
  .c0 {
    overflow-clip-margin: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClipMargin renders postitive number 1`] = `
Array [
  .c0 {
  overflow-clip-margin: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClipMargin renders string 1`] = `
Array [
  .c0 {
  overflow-clip-margin: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: June;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: June;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClipMargin renders valid theme path 1`] = `
Array [
  .c0 {
  overflow-clip-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
